--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>5.4.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.2</version>
+    </dependency>
   </dependencies>
 
   <build>
