--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <release>11</release>
+            <release>14</release>
           </configuration>
         </plugin>
         <plugin>
@@ -82,6 +82,16 @@
         </plugin>
       </plugins>
     </pluginManagement>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>14</source>
+                  <target>14</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 
   <reporting>
